; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_copy_file.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_copy_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@F_OK = common dso_local global i32 0, align 4
@O_RDONLY = common dso_local global i32 0, align 4
@_O_BINARY = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @copy_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_file(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.stat, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* @F_OK, align 4
  %17 = call i64 @access(i8* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @unlink(i8* %20)
  br label %94

22:                                               ; preds = %3
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* @O_RDONLY, align 4
  %25 = load i32, i32* @_O_BINARY, align 4
  %26 = or i32 %24, %25
  %27 = call i32 @open(i8* %23, i32 %26, i32 420)
  store i32 %27, i32* %7, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* @O_RDWR, align 4
  %30 = load i32, i32* @O_CREAT, align 4
  %31 = or i32 %29, %30
  %32 = load i32, i32* @_O_BINARY, align 4
  %33 = or i32 %31, %32
  %34 = call i32 @open(i8* %28, i32 %33, i32 420)
  store i32 %34, i32* %8, align 4
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @fstat(i32 %35, %struct.stat* %11)
  %37 = getelementptr inbounds %struct.stat, %struct.stat* %11, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  store i64 %38, i64* %9, align 8
  %39 = load i32, i32* %8, align 4
  %40 = load i64, i64* %9, align 8
  %41 = call i32 @ftruncate(i32 %39, i64 %40)
  %42 = call i32* @testMalloc(i32 4096)
  store i32* %42, i32** %12, align 8
  store i64 0, i64* %10, align 8
  br label %43

43:                                               ; preds = %84, %22
  %44 = load i64, i64* %10, align 8
  %45 = load i64, i64* %9, align 8
  %46 = icmp slt i64 %44, %45
  br i1 %46, label %47, label %87

47:                                               ; preds = %43
  %48 = load i32, i32* %6, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %53

50:                                               ; preds = %47
  %51 = load i64, i64* %10, align 8
  %52 = icmp eq i64 %51, 0
  br label %53

53:                                               ; preds = %50, %47
  %54 = phi i1 [ false, %47 ], [ %52, %50 ]
  %55 = zext i1 %54 to i32
  store i32 %55, i32* %13, align 4
  %56 = load i32, i32* %13, align 4
  %57 = icmp ne i32 %56, 0
  %58 = zext i1 %57 to i64
  %59 = select i1 %57, i32 4066, i32 4096
  %60 = load i64, i64* %9, align 8
  %61 = load i64, i64* %10, align 8
  %62 = sub nsw i64 %60, %61
  %63 = call i32 @MIN(i32 %59, i64 %62)
  store i32 %63, i32* %14, align 4
  %64 = load i32*, i32** %12, align 8
  %65 = call i32 @memset(i32* %64, i32 0, i32 4096)
  %66 = load i32, i32* %7, align 4
  %67 = load i32*, i32** %12, align 8
  %68 = load i32, i32* %14, align 4
  %69 = call i32 @read(i32 %66, i32* %67, i32 %68)
  %70 = load i32, i32* %8, align 4
  %71 = load i32*, i32** %12, align 8
  %72 = load i32, i32* %14, align 4
  %73 = call i32 @write(i32 %70, i32* %71, i32 %72)
  %74 = load i32, i32* %13, align 4
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %76, label %83

76:                                               ; preds = %53
  %77 = load i32, i32* %7, align 4
  %78 = load i32, i32* @SEEK_SET, align 4
  %79 = call i32 @lseek(i32 %77, i32 4096, i32 %78)
  %80 = load i32, i32* %8, align 4
  %81 = load i32, i32* @SEEK_SET, align 4
  %82 = call i32 @lseek(i32 %80, i32 4096, i32 %81)
  br label %83

83:                                               ; preds = %76, %53
  br label %84

84:                                               ; preds = %83
  %85 = load i64, i64* %10, align 8
  %86 = add nsw i64 %85, 4096
  store i64 %86, i64* %10, align 8
  br label %43

87:                                               ; preds = %43
  %88 = load i32*, i32** %12, align 8
  %89 = call i32 @testFree(i32* %88)
  %90 = load i32, i32* %7, align 4
  %91 = call i32 @close(i32 %90)
  %92 = load i32, i32* %8, align 4
  %93 = call i32 @close(i32 %92)
  br label %94

94:                                               ; preds = %87, %19
  ret void
}

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @unlink(i8*) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @fstat(i32, %struct.stat*) #1

declare dso_local i32 @ftruncate(i32, i64) #1

declare dso_local i32* @testMalloc(i32) #1

declare dso_local i32 @MIN(i32, i64) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @read(i32, i32*, i32) #1

declare dso_local i32 @write(i32, i32*, i32) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @testFree(i32*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
